이메일 수정, 각각 리스트뷰의 날씨 제거, splash Activity 로딩 타임 적용

--- a/Kiznic/res/layout/activity_detailpage.xml
+++ b/Kiznic/res/layout/activity_detailpage.xml
@@ -76,6 +76,8 @@
                 android:layout_gravity="center"
 
                 android:text="[성남 아트센터] 배고픈 애벌레"
+                android:singleLine="true"
+                android:ellipsize="middle"
 
                 android:textColor="#000000"
 
@@ -95,7 +97,8 @@
             <ImageView
                 android:id="@+id/detail_mainposter_image"
                 android:layout_width="match_parent"
-                android:layout_height="300dip"/>
+                android:layout_height="300dip"
+                android:scaleType="fitXY"/>
         </LinearLayout>
 
        
