--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -93,14 +93,15 @@
 		 <LinearLayout
 		     android:layout_width="match_parent"
 		     android:layout_height="0dip"
-		     android:layout_weight="130"
+		     android:layout_weight="120"
 		     android:background="@drawable/detail_underline_background"
 		     android:orientation="horizontal">
 		     
 		     <LinearLayout
 		         android:layout_width="0dip"
-		         android:layout_height="match_parent"
+		         android:layout_height="wrap_content"
 		         android:layout_weight="28"
+		         android:layout_gravity="center"
 		         android:layout_marginRight="1dip"
 		         android:orientation="vertical">
 		         
@@ -119,7 +120,7 @@
 		             	    <ImageView
 			                     android:id="@+id/weather_weatherimage_image"
 			                     android:layout_width="match_parent"
-			                     android:layout_height="match_parent"
+			                     android:layout_height="90dp"
 			                     android:layout_gravity="center"
 			                     android:padding="5dip"/>
 		             	    
@@ -136,17 +137,18 @@
 				                android:id="@+id/weather_temperature_text"
 				                android:layout_width="wrap_content"
 				                android:layout_height="wrap_content"
-				                android:layout_gravity="center"
+				                android:gravity="center"
 	 		                    android:textColor="#000000"
-			                    android:textSize="30sp"/>
+	 		                    android:textSize="33sp"
+			                    />
 		            	    
 		                    <TextView
 		             	        android:id="@+id/weather_windcilltemperature_text"
 		                        android:layout_width="wrap_content"
 		      	                android:layout_height="wrap_content"
-								android:layout_gravity="center"
-		             	        android:textColor="#FFFFFF"
-		             	        android:textSize="15sp" />
+		             	        android:textColor="#000000"
+		             	        android:textSize="15sp"
+		             	         />
 		             	    
 		             	</LinearLayout>
 		             
@@ -156,9 +158,10 @@
 
 		     <LinearLayout
 		         android:layout_width="0dip"
-		         android:layout_height="match_parent"
+		         android:layout_height="wrap_content"
 		         android:layout_weight="15"
-		         android:layout_marginLeft="1dip"
+		         android:layout_gravity="center"
+		         
 		         android:orientation="horizontal">
 		             
 		             <LinearLayout
@@ -169,7 +172,7 @@
 		                 <ImageView
 		                     android:id="@+id/weather_nextweatherimage_image"
 		                     android:layout_width="match_parent"
-		                     android:layout_height="match_parent"
+		                     android:layout_height="70dp"
 		                     android:layout_gravity="center"/>
 		                 
 		             </LinearLayout>
@@ -185,7 +188,7 @@
 		                     android:layout_height="wrap_content"
 							 android:layout_centerInParent="true"
 		                     android:textColor="#000000"
-		                     android:textSize="15sp"/>
+		                     android:textSize="18sp"/>
 		                 
 		             </RelativeLayout>
 		             
