main_seekbar search_category list mypage_default edittext set

--- a/Kiznic/res/drawable-hdpi/seekbar_progress_background.xml
+++ b/Kiznic/res/drawable-hdpi/seekbar_progress_background.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <clip xmlns:android="http://schemas.android.com/apk/res/android" >
-        <nine-patch
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:src="@drawable/whitepatch">
-          </nine-patch>
+
+			<nine-patch
+            	xmlns:android="http://schemas.android.com/apk/res/android"
+            	android:src="@drawable/a">
+          	</nine-patch>
 </clip>
