--- a/Kiznic/res/layout/dailog_search.xml
+++ b/Kiznic/res/layout/dailog_search.xml
@@ -23,7 +23,6 @@
 	                android:layout_height="wrap_content"
 	                android:layout_gravity="center_vertical"
 	                android:layout_marginLeft="10dip"
-	                android:text="기간 선택"
 	                android:textColor="#000000"
 	                android:textSize="16sp"/>
                 
@@ -40,11 +39,10 @@
 				android:id="@+id/search_dialog_list_list"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
-				android:background="#000000"
+				android:background="#FFFFFF"
+				android:focusable="true"
 				android:headerDividersEnabled="true"
 				android:footerDividersEnabled="true"
-				android:listSelector="@android:color/transparent"
-				android:cacheColorHint="@android:color/transparent"
 				android:divider="#ACACAC"
 				android:dividerHeight="1dip"
 				android:scrollbars="none" />
