--- a/Kiznic/res/drawable-hdpi/carditem_background.xml
+++ b/Kiznic/res/drawable-hdpi/carditem_background.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     
-    <item android:drawable="@drawable/layer_carditem_background"/>
+    <item android:state_pressed="true" 
+        android:drawable="@drawable/layer_carditem_background_press_focus"/>
 
+    <item android:state_focused="true" 
+        android:drawable="@drawable/layer_carditem_background_press_focus"/>
+    
+    <item android:drawable="@drawable/layer_carditem_background"/>
+    
 </selector>
