--- a/Kiznic/res/drawable-hdpi/layer_carditem_background.xml
+++ b/Kiznic/res/drawable-hdpi/layer_carditem_background.xml
@@ -1,16 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <item android:bottom="-1dp" android:right="-1dp" android:left="-1dp">
-	    <shape>
-	        
-	        <solid android:color="#FFFFFF"/>
-	        
-		    <stroke
-		        android:width="1dip"
-		        android:color="#76C4C1" />
-		</shape>
-	</item>
-    
-
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" 
+    android:shape="rectangle">
+    <solid android:color="#FFFFFF"/>
+</shape>
