--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -58,10 +58,10 @@
                     android:scaleType="fitXY"/>
                 
                 <SeekBar android:id="@+id/condition_range_seekbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dip"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="20dip"
+                    android:layout_width="205dip"
+                    android:layout_height="30dip"
+                    android:layout_marginTop="7dip"
+                    android:layout_marginLeft="11dip"
                     android:max="4"
                     android:progress="0"
        				android:secondaryProgress="0"
