--- a/Kiznic/res/layout/activity_mypage.xml
+++ b/Kiznic/res/layout/activity_mypage.xml
@@ -591,7 +591,7 @@
 	                    android:layout_width="match_parent"
 	                    android:layout_height="match_parent"
 	                    android:orientation="horizontal"
-	                    android:background="#70000000">
+	                    android:background="#ACACAC">
 	                    
 	                    <LinearLayout
 	                        android:layout_width="0dip"
