--- a/Kiznic/res/drawable-hdpi/layer_underline_detail.xml
+++ b/Kiznic/res/drawable-hdpi/layer_underline_detail.xml
@@ -7,7 +7,7 @@
 	        
 		    <stroke
 		        android:width="1dip"
-		        android:color="#76C4C1" />
+		        android:color="#4076C4C1" />
 		</shape>
 	</item>
 
