--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
 	                android:layout_gravity="center_vertical"
+	                android:layout_marginLeft="5dp"
 	                android:text="누구지님 오늘은 어디까지 갈까요?"
 	               	android:textColor="#000000"
 	               	android:textSize="15sp"/>
