--- a/Kiznic/res/layout/list_item_card.xml
+++ b/Kiznic/res/layout/list_item_card.xml
@@ -9,7 +9,7 @@
 	<LinearLayout
 		android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="250dip"
+		android:layout_height="280dip"
 		android:layout_marginTop="10dip"
 		android:layout_marginRight="10dip"
 		android:layout_marginLeft="10dip"
@@ -27,12 +27,14 @@
 	        
 	        <TextView
 	            android:id="@+id/recommend_title_text"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
+	            android:layout_width="match_parent"
+	            android:layout_height="match_parent"
 	            android:layout_gravity="center"
-	            android:layout_marginLeft="5dip"
+	            android:gravity="center_vertical"
+	            android:paddingLeft="5dp"
 	            android:text="공연 / 전시"
 	            android:textColor="#000000"
+	            android:background="#6076C4C1"
 	            android:textSize="16sp"/>
 	        
 	    </LinearLayout>
@@ -57,6 +59,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="0dip"
 	        android:layout_weight="1"
+	        android:background="#2076C4C1"
 	        android:orientation="vertical">
 	        
 	        <Button
@@ -66,7 +69,7 @@
 	            android:text="더 보 기"
 	            android:textSize="16sp"
 	            android:textColor="#000000"
-	            android:background="#5076C4C1"/>
+	            android:background="#2076C4C1"/>
 	        
 	    </LinearLayout>
 	    
