--- a/Kiznic/res/layout/list_item_card_item_card.xml
+++ b/Kiznic/res/layout/list_item_card_item_card.xml
@@ -7,7 +7,7 @@
     <LinearLayout
        	android:id="@+id/recommend_recommendview_view"
 	        android:layout_width="match_parent"
-	        android:layout_height="89dip"
+	        android:layout_height="100dip"
 	        android:orientation="horizontal"
 	        android:clickable="true"
 	        android:focusable="true"
@@ -77,7 +77,7 @@
 	                        android:layout_height="wrap_content"
 	                        android:layout_gravity="center"
 	                        android:text="기간"
-	                        android:textColor="#000000"
+	                        android:textColor="#33A2B1"
 	                        android:textSize="12sp"/>
 	                      
 		                <TextView
@@ -105,7 +105,7 @@
 	                        android:layout_height="wrap_content"
 	                        android:layout_gravity="center"
 	                        android:text="장소"
-	                        android:textColor="#000000"
+	                        android:textColor="#33A2B1"
 	                        android:textSize="12sp"/>
 	                        
 	                    <TextView
@@ -133,7 +133,7 @@
 	                        android:layout_height="wrap_content"
 	                        android:layout_gravity="center"
 	                        android:text="나와의 거리"
-	                        android:textColor="#000000"
+	                        android:textColor="#33A2B1"
 	                        android:textSize="12sp"/>
 	                      
 		                <TextView
@@ -145,7 +145,7 @@
 	                        android:singleLine="true"
 	                        android:ellipsize="end"
 		                    android:text="5km"
-		                    android:textColor="#6AC1C6"
+		                    android:textColor="#000000"
 		                    android:textSize="12sp"/>
 	                    
 	                </LinearLayout>
