--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -9,7 +9,7 @@
     <LinearLayout
 		android:orientation="vertical"
 		android:layout_width="match_parent"
-		android:layout_height="200dip"
+		android:layout_height="160dip"
 		android:layout_marginTop="10dip"
 		android:layout_marginRight="10dip"
 		android:layout_marginLeft="10dip"
@@ -93,7 +93,7 @@
 		 <LinearLayout
 		     android:layout_width="match_parent"
 		     android:layout_height="0dip"
-		     android:layout_weight="120"
+		     android:layout_weight="121"
 		     android:background="@drawable/detail_underline_background"
 		     android:orientation="horizontal">
 		     
@@ -101,7 +101,7 @@
 		         android:layout_width="0dip"
 		         android:layout_height="wrap_content"
 		         android:layout_weight="28"
-		         android:layout_gravity="center"
+		         android:layout_gravity="top"
 		         android:layout_marginRight="1dip"
 		         android:orientation="vertical">
 		         
@@ -120,7 +120,7 @@
 		             	    <ImageView
 			                     android:id="@+id/weather_weatherimage_image"
 			                     android:layout_width="match_parent"
-			                     android:layout_height="90dp"
+			                     android:layout_height="80dp"
 			                     android:layout_gravity="center"
 			                     android:padding="5dip"/>
 		             	    
@@ -130,7 +130,8 @@
 		             	    android:layout_width="0dip"
 		             	    android:layout_height="match_parent"
 		             	    android:layout_weight="180"
-		             	    android:gravity="center"
+		             	    android:layout_gravity="top"
+		             	    android:gravity="top"
 		             	    android:orientation="vertical" >
 		             	    
 		             	    <TextView
@@ -160,7 +161,7 @@
 		         android:layout_width="0dip"
 		         android:layout_height="wrap_content"
 		         android:layout_weight="15"
-		         android:layout_gravity="center"
+		         android:layout_gravity="top"
 		         
 		         android:orientation="horizontal">
 		             
