--- a/Kiznic/res/layout/list_item_card_item_card.xml
+++ b/Kiznic/res/layout/list_item_card_item_card.xml
@@ -7,7 +7,7 @@
     <LinearLayout
        	android:id="@+id/recommend_recommendview_view"
 	        android:layout_width="match_parent"
-	        android:layout_height="100dip"
+	        android:layout_height="110dip"
 	        android:orientation="horizontal"
 	        android:clickable="true"
 	        android:focusable="true"
@@ -18,7 +18,7 @@
 	        <LinearLayout
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
-	            android:layout_weight="4"
+	            android:layout_weight="5"
 	            android:padding="10dp"
 	            android:gravity="center"
 	            android:orientation="vertical">
@@ -37,12 +37,13 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:layout_weight="7"
+	            android:gravity="center"
 	            android:orientation="vertical">
 	            
 	            <RelativeLayout
 	                android:layout_width="match_parent"
-	                android:layout_height="0dip"
-	                android:layout_weight="1"
+	                android:layout_height="wrap_content"
+	                android:layout_marginBottom="6dp"
 	                android:orientation="horizontal">
 	                
 	                <!-- recommend title -->
@@ -56,20 +57,20 @@
 	                    android:ellipsize="end"
 	                    android:text="배고픈 애벌레"
 	                    android:textColor="#000000"
-	                    android:textSize="13sp"/>
+	                    android:textSize="17sp"/>
 	                
 	            </RelativeLayout>
 	            
 	            <LinearLayout
 	                android:layout_width="match_parent"
-	                android:layout_height="0dip"
-	                android:layout_weight="2"
+	                android:layout_height="wrap_content"
+	                android:gravity="center"
 	                android:orientation="vertical">
 	                
 	                <LinearLayout
 	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginBottom="7dp"
 	                    android:orientation="horizontal">
 	                    
 	                    <TextView
@@ -96,8 +97,8 @@
 	                
 	                <LinearLayout
 	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginBottom="7dp"
 	                    android:orientation="horizontal">
 	                    
 	                    <TextView
@@ -124,8 +125,7 @@
 	                
 	                <LinearLayout
 	                    android:layout_width="match_parent"
-	                    android:layout_height="0dip"
-	                    android:layout_weight="1"
+	                    android:layout_height="wrap_content"
 	                    android:orientation="horizontal">
 	                    
 	                    <TextView
