--- a/Kiznic/res/layout/activity_mypage.xml
+++ b/Kiznic/res/layout/activity_mypage.xml
@@ -21,6 +21,15 @@
 	            android:layout_width="0dip"
 	            android:layout_height="match_parent"
 	            android:layout_weight="51">
+	            
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dip"
+                    android:text="Profile"
+                    android:textSize="17sp"/>
+                
 	            <!-- 
 	            <TextView
 	                android:id="@+id/mypage_id_text"
