--- a/Kiznic/res/layout/detailpage_info_list_card.xml
+++ b/Kiznic/res/layout/detailpage_info_list_card.xml
@@ -21,10 +21,10 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
-                android:padding="5dp"
+                android:layout_marginLeft="10dip"
                 android:text="정보 Title"
                 android:textColor="#000000"
-                android:textSize="14sp"/>
+                android:textSize="12sp"/>
             
         </LinearLayout>
         
@@ -36,10 +36,8 @@
                 android:id="@+id/detailpage_info_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:layout_margin="10dip"
-                android:gravity="center"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 android:text="정보 내용"
                 android:textColor="#000000"
                 />
