--- a/Kiznic/res/drawable-hdpi/layer_gray_sideline_background.xml
+++ b/Kiznic/res/drawable-hdpi/layer_gray_sideline_background.xml
@@ -3,7 +3,7 @@
     
      <item android:bottom="-5dip" android:top="-5dip" android:right="-5dp">
 	    <shape>
-	        <solid android:color="#F9F9F9"/>
+	        <solid android:color="#FFFFFF"/>
 	        
 		    <stroke
 		        android:width="1dip"
