--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 		android:background="#FFFFFF"
         android:orientation="horizontal">
     
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="17">
@@ -19,10 +19,18 @@
                 android:id="@+id/profile_kidimage_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
                 android:padding="5dip"/>
             
-        </LinearLayout>
+            <TextView
+                android:id="@+id/profile_kidsetplz_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="프로필을 등록해주세요"
+               	android:textSize="10sp"
+               	android:textColor="#000000"/>
+            
+        </RelativeLayout>
         
         <LinearLayout
             android:layout_width="0dip"
@@ -41,7 +49,7 @@
 	                android:layout_height="wrap_content"
 	                android:layout_gravity="center_vertical"
 	                android:layout_marginLeft="5dp"
-	                android:text="누구지님 오늘은 어디까지 갈까요?"
+	                android:text="오늘 나들이는 어디까지 갈까요?"
 	               	android:textColor="#000000"
 	               	android:textSize="15sp"/>
 	                
