--- a/Kiznic/res/layout/detailpage_nevigation_list_card.xml
+++ b/Kiznic/res/layout/detailpage_nevigation_list_card.xml
@@ -7,7 +7,7 @@
 	<LinearLayout
 	    android:id="@+id/detailpage_nevigationbackground_view"
 	    android:layout_width="match_parent"
-	    android:layout_height="60dip"
+	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
 	    
 	    <LinearLayout
@@ -25,7 +25,7 @@
 	    
 	    <LinearLayout
 	        android:layout_width="0dip"
-	        android:layout_height="match_parent"
+	        android:layout_height="wrap_content"
 	        android:layout_weight="8">
 	        
 	        <TextView
