--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -34,6 +34,7 @@
 		             android:textColor="#000000"
 		             android:textSize="17sp"/>
 		         
+		     <!--
 		         <ImageView
 		             android:id="@+id/weather_getlocation_imagebutton"
 		             android:layout_width="15dip"
@@ -41,7 +42,7 @@
 		             android:layout_marginLeft="5dip"
 		             android:background="@drawable/weather_gps"
 		             android:layout_gravity="center"/>
-		     
+		     -->
 		 </LinearLayout>
 		 
 		 <LinearLayout
@@ -91,6 +92,7 @@
 		 </LinearLayout>
 		 
 		 <LinearLayout
+		     android:id="@+id/weather_weather_layout"
 		     android:layout_width="match_parent"
 		     android:layout_height="0dip"
 		     android:layout_weight="121"
